--- a/web/react-app/src/pages/Train.css
+++ b/web/react-app/src/pages/Train.css
@@ -79,3 +79,32 @@
   font-size: 17px;
   font-weight: normal;
 }
+
+.startbtn {
+  display: inline-block;
+  padding: 10px 20px;
+  margin-top: 10rem;
+  margin-left: 40rem;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 5px;
+  border: none;
+  background-color: #3b94f3;
+  color: #ffffff;
+  transition: background-color 0.3s ease;
+  width: 10rem;
+  height: 3rem;
+}
+
+/* 버튼 호버 효과 */
+.startbtn:hover {
+  background-color: #0056b3;
+}
+
+/* 버튼 액티브 효과 */
+.startbtn:active {
+  background-color: #00449e;
+}
