--- a/web/react-app/src/pages/Train.css
+++ b/web/react-app/src/pages/Train.css
@@ -1,15 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap');
+
 .container {
   display: flex;
   flex-direction: column;
   /* align-items: center; */
   margin-left: 1rem;
   margin-right: 1rem;
+  font-family: 'Source Sans Pro', Arial, sans-serif;
 }
 
 .resource-container {
   display: flex;
   justify-content: space-around;
-  width: 100%;
+  width: 95%;
+  margin-top: 2rem;
+  font-weight: 700;
 }
 
 .circular-progress {
@@ -18,6 +23,14 @@
   position: relative;
 }
 
+.head {
+  margin-top: 2rem;
+  display: flex;
+}
+
+.info {
+  margin-left: 2rem;
+}
 .inner1 {
   position: absolute;
   top: 50%;
@@ -25,7 +38,6 @@
   transform: translate(20px, 35px); /* x축으로 40px, y축으로 30px 이동 */
   z-index: 10;
   text-anchor: middle;
-  dominant-baseline: middle;
   white-space: nowrap; /* 텍스트가 한 줄로만 표시되도록 설정 */
 }
 .inner2 {
@@ -35,7 +47,6 @@
   transform: translate(-10px, 35px); /* x축으로 40px, y축으로 30px 이동 */
   z-index: 10;
   text-anchor: middle;
-  dominant-baseline: middle;
   white-space: nowrap; /* 텍스트가 한 줄로만 표시되도록 설정 */
 }
 .inner3 {
@@ -45,7 +56,6 @@
   transform: translate(20px, 35px); /* x축으로 40px, y축으로 30px 이동 */
   z-index: 10;
   text-anchor: middle;
-  dominant-baseline: middle;
   white-space: nowrap; /* 텍스트가 한 줄로만 표시되도록 설정 */
 }
 .inner4 {
@@ -55,13 +65,12 @@
   transform: translate(0px, 35px); /* x축으로 40px, y축으로 30px 이동 */
   z-index: 10;
   text-anchor: middle;
-  dominant-baseline: middle;
   white-space: nowrap; /* 텍스트가 한 줄로만 표시되도록 설정 */
 }
 
 .background-circle {
   fill: transparent;
-  stroke: #e0e0e0; /* 회색 */
+  stroke: #e7e7e7; /* 회색 */
   stroke-width: 20;
   transform: rotate(-90deg);
   transform-origin: center;
@@ -80,11 +89,14 @@
   font-weight: normal;
 }
 
+.parent-container {
+  position: relative;
+}
+
 .startbtn {
   display: inline-block;
   padding: 10px 20px;
-  margin-top: 10rem;
-  margin-left: 40rem;
+  margin-top: 38rem;
   font-size: 16px;
   font-weight: bold;
   text-align: center;
@@ -92,16 +104,21 @@
   cursor: pointer;
   border-radius: 5px;
   border: none;
-  background-color: #3b94f3;
-  color: #ffffff;
+  background-color: #f0f0f0;
+  color: #000000;
   transition: background-color 0.3s ease;
   width: 10rem;
   height: 3rem;
+
+  /* 중앙 정렬을 위한 스타일 */
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 /* 버튼 호버 효과 */
 .startbtn:hover {
-  background-color: #0056b3;
+  background-color: #7dbcff;
 }
 
 /* 버튼 액티브 효과 */
