feat: 차트 구현 및 컴포넌트 배치 완료. (리팩토링 필요)

--- a/web/react-app/src/pages/Train.css
+++ b/web/react-app/src/pages/Train.css
@@ -244,7 +244,7 @@
   box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.1); /* 상하좌우에 그림자를 강조 */
   overflow: hidden; /* 내부 컨텐츠의 넘치는 부분을 잘라냄 */
   padding: 2%;
-  margin-left: 30px;
+  margin-left: 6rem;
   background-color: white;
 }
 
