--- a/web/react-app/src/App.css
+++ b/web/react-app/src/App.css
@@ -40,12 +40,11 @@
 .big-container {
   width: 100%;
   height: auto; /* 세로가 내용에 따라 늘어남 */
-  max-height: 100vh; /* 화면 높이를 넘지 않도록 최대 높이 지정 */
+  max-height: 300vh; /* 화면 높이를 넘지 않도록 최대 높이 지정 */
   /* background-color: #17222c; */ /* 배경 색상 제거 */
   background-image: url('/public/background.jpg'); /* 여기에 사용하려는 이미지의 URL 추가 */
   background-size: cover; /* 컨테이너 전체를 덮도록 설정 */
   background-position: center; /* 배경 이미지를 가운데 정렬 */
-  overflow-y: auto; /* 내용이 넘칠 경우 세로 스크롤 생성 */
   font-family: Nunito, sans-serif;
 }
 
@@ -72,4 +71,21 @@
 
 .map-component-box {
   text-align: left; /* 내부 요소를 왼쪽 정렬 */
+  display: flex;
+}
+
+.intensity-box {
+  width: 650px;
+  height: 500px;
+  padding: 3%;
+  border-radius: 11px;
+  box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  margin: 0;
+  top: 50px;
+  background-color: white;
+  margin-left: 5rem;
 }
