--- a/web/react-app/src/pages/Train.css
+++ b/web/react-app/src/pages/Train.css
@@ -276,11 +276,13 @@
   margin-right: 10px;
   background-color: black;
   color: white;
-  width: 300px;
-  height: 100px;
-  text-align: left;
-  font-family: monospace;
+  width: 500px;
+  height: 50px; /* input 요소는 height를 조절할 수 있습니다 */
+  font-family: 'Courier New', Courier, monospace;
+  box-sizing: border-box;
   caret-color: white;
+  text-align: left;
+  height: 300px;
 }
 
 .resource-name {
